--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ members = [
 ]
 
 [workspace.dependencies]
+async-trait = "0.1.88"
 serde = { version = "1.0.219", features = ["derive"] }
 
 [dependencies]
