--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ members = [
 ]
 
 [workspace.dependencies]
+anyhow = "1.0"
 async-trait = "0.1.88"
 serde = { version = "1.0.219", features = ["derive"] }
 
@@ -30,6 +31,7 @@ lib-weather = { path = "lib/weather" }
 
 # external
 egui = "0.31"
+egui_plot = "0.32.1"
 eframe = { version = "0.31", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
@@ -41,6 +43,7 @@ log = "0.4.27"
 tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
 
 # workspace
+anyhow.workspace = true
 serde.workspace = true
 
 # native
