--- a/lib/weather/Cargo.toml
+++ b/lib/weather/Cargo.toml
@@ -7,6 +7,7 @@ rust-version = "1.81"
 publish = false
 
 [dependencies]
+anyhow.workspace = true
 async-trait.workspace = true
 reqwest = { version = "0.12", features = ["json"] }
 serde.workspace = true
