--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ serde = { version = "1.0.219", features = ["derive"] }
 lib-weather = { path = "lib/weather" }
 
 # external
-egui = "0.31"
-egui_plot = "0.32.1"
+egui = { version = "0.31" }
+egui_plot = { version = "0.32.1" }
 eframe = { version = "0.31", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
@@ -38,8 +38,9 @@ eframe = { version = "0.31", default-features = false, features = [
     "wayland",       # To support Linux (and CI)
     "x11",           # To support older Linux distributions (restores one of the default features)
 ] }
-log = "0.4.27"
 tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
+tracing = { version = "0.1" }
+tracing-subscriber = { version = "0.3" }
 
 # workspace
 anyhow.workspace = true
