--- a/lib/weather/Cargo.toml
+++ b/lib/weather/Cargo.toml
@@ -11,3 +11,4 @@ anyhow.workspace = true
 async-trait.workspace = true
 reqwest = { version = "0.12", features = ["json"] }
 serde.workspace = true
+tracing.workspace = true
