--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ eframe = { version = "0.31", default-features = false, features = [
     "wayland",       # To support Linux (and CI)
     "x11",           # To support older Linux distributions (restores one of the default features)
 ] }
-tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
+tokio = { version = "1.46.1", features = ["sync"] }
 tracing-subscriber = { version = "0.3", features = ["fmt", "chrono", "env-filter"] }
 
 # workspace
