--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tracing = { version = "0.1" }
 lib-weather = { path = "lib/weather" }
 
 # external
+chrono = { version = "0.4.41" }
 egui = { version = "0.31" }
 egui_extras = { version ="0.31.1" }
 egui_plot = { version = "0.32.1" }
