slightly prettier temp chart

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ eframe = { version = "0.31", default-features = false, features = [
     "x11",           # To support older Linux distributions (restores one of the default features)
 ] }
 tokio = { version = "1.46.1", features = ["sync"] }
+time = { version = "0.3", features = ["formatting"] }
 tracing-subscriber = { version = "0.3", features = ["fmt", "chrono", "env-filter"] }
 
 # workspace
