--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,8 @@ updates:
       interval: "weekly"
     reviewers:
       - "neuronull"
+    groups:
+      equi:
+        patterns:
+          - "egui*"
+          - "eframe"
