support compilation to WASM

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ eframe = { version = "0.32", default-features = false, features = [
     "wayland",       # To support Linux (and CI)
     "x11",           # To support older Linux distributions (restores one of the default features)
 ] }
-tokio = { version = "1.46.1", features = ["sync"] }
+tokio = { version = "1.46.1", features = ["sync", "rt"] }
 time = { version = "0.3", features = ["formatting"] }
 tracing-subscriber = { version = "0.3", features = ["fmt", "chrono", "env-filter"] }
 
