--- a/lib/weather/Cargo.toml
+++ b/lib/weather/Cargo.toml
@@ -12,3 +12,6 @@ async-trait.workspace = true
 reqwest = { version = "0.12", features = ["json"] }
 serde.workspace = true
 tracing.workspace = true
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+gloo-net = "0.5"
