--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,10 @@ lib-weather = { path = "lib/weather" }
 
 # external
 chrono = { version = "0.4.41" }
-egui = { version = "0.32" }
+egui = { version = "0.32.0" }
 egui_extras = { version ="0.32.0" }
 egui_plot = { version = "0.33.0" }
-eframe = { version = "0.32", default-features = false, features = [
+eframe = { version = "0.32.0", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
@@ -55,3 +55,15 @@ chrono-tz = "0.10.4"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4.50"
 web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
+
+[dev-dependencies]
+async-trait.workspace = true
+eframe = { version = "0.32.0", default-features = false, features = [
+    "accesskit",     # to compile egui_kittest
+    "default_fonts", # Embed the default egui fonts.
+    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
+    "persistence",   # Enable restoring app state when restarting the app.
+    "wayland",       # To support Linux (and CI)
+    "x11",           # To support older Linux distributions (restores one of the default features)
+] }
+egui_kittest = { version = "0.32.0", default-features = false }
