--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ lib-weather = { path = "lib/weather" }
 
 # external
 chrono = { version = "0.4.41" }
+chrono-tz = { version = "0.10.4" }
+cfg-if = { version = "1.0.1" }
 egui = { version = "0.32.0" }
 egui_extras = { version ="0.32.0" }
 egui_plot = { version = "0.33.0" }
@@ -49,7 +51,6 @@ tracing-subscriber = { version = "0.3", features = ["fmt", "chrono", "env-filter
 anyhow.workspace = true
 serde.workspace = true
 tracing.workspace = true
-chrono-tz = "0.10.4"
 
 # web
 [target.'cfg(target_arch = "wasm32")'.dependencies]
