--- a/lib/geolocate/Cargo.toml
+++ b/lib/geolocate/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "lib-weather"
-version = "0.2.0"
+name = "lib-geolocate"
+version = "0.1.0"
 authors = ["neuronull"]
 edition = "2021"
 rust-version = "1.81"
@@ -8,7 +8,6 @@ publish = false
 
 [dependencies]
 anyhow.workspace = true
-async-trait.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 tracing.workspace = true
