--- a/.github/workflows/deploy-ghpages.yml
+++ b/.github/workflows/deploy-ghpages.yml
@@ -25,8 +25,10 @@ jobs:
       - name: Build with trunk
         env:
           PIRATEWEATHER_API_KEY: ${{ secrets.PIRATEWEATHER_API_KEY }}
+          IPLOCATE_API_KEY: ${{ secrets.IPLOCATE_API_KEY}}
         run: |
           export PIRATEWEATHER_API_KEY=${PIRATEWEATHER_API_KEY}
+          export IPLOCATE_API_KEY=${IPLOCATE_API_KEY}
           trunk build --release --public-url /horizon/
 
       - name: Deploy to GitHub Pages
